# S3-Agent

./: .gitignore  Dockerfile  README.md  TECHNICAL_README.md  agentic_api.py  agentic_chat.py  agentic_server.py  auth_node.py  enhanced_agentic_chat.py  frontend.html  graph.py  main.py  permission_node.py  pyproject.toml  report_node.py  requirements.txt  s3_inspector_node.py  s3_manager_agent.py  s3_query_agent.py  server.py  task-definition.json  test_agentic.py
